--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -403,11 +403,11 @@ repositories:
               {
                 "failure_rules":
                   [
-                    {"step": "knative-eventing-kafka-broker-e2e", "failure_type": "test_failure", "classification": "knative-eventing-kafka-broker-e2e Test Failure", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "knative-serving-eventing-e2e", "failure_type": "test_failure", "classification": "knative-serving-eventing-e2e Test Failure", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "operator-e2e", "failure_type": "test_failure", "classification": "operator-e2e Test Failure", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "knative-*", "failure_type": "pod_failure", "classification": "knative Test Execution", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "operator-e2e", "failure_type": "pod_failure", "classification": "operator-e2e Test Execution", "jira_additional_labels": ["!default","interop-tests"]}
+                    {"step": "knative-eventing-kafka-broker-e2e", "failure_type": "test_failure", "classification": "knative-eventing-kafka-broker-e2e Test Failure", "jira_additional_labels": ["!default","interop-tests"], "jira_assignee": "!default"},
+                    {"step": "knative-serving-eventing-e2e", "failure_type": "test_failure", "classification": "knative-serving-eventing-e2e Test Failure", "jira_additional_labels": ["!default","interop-tests"], "jira_assignee": "!default"},
+                    {"step": "operator-e2e", "failure_type": "test_failure", "classification": "operator-e2e Test Failure", "jira_additional_labels": ["!default","interop-tests"], "jira_assignee": "!default"},
+                    {"step": "knative-*", "failure_type": "pod_failure", "classification": "knative Test Execution", "jira_additional_labels": ["!default","interop-tests"], "jira_assignee": "!default"},
+                    {"step": "operator-e2e", "failure_type": "pod_failure", "classification": "operator-e2e Test Execution", "jira_additional_labels": ["!default","interop-tests"], "jira_assignee": "!default"}
                   ]
               }
             FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.21-lp","self-managed-lp","serverless-lp"]'
@@ -420,7 +420,7 @@ repositories:
               scenario serverless
           test:
           - as: operator-e2e
-            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin SKIP_MESH_AUTH_POLICY_GENERATION=true
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin SKIP_MESH_AUTH_POLICY_GENERATION=true MAP_TESTS=true
               make test-e2e-with-kafka
             from: serverless-source-image
             resources:
@@ -430,7 +430,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin SKIP_MESH_AUTH_POLICY_GENERATION=true
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin SKIP_MESH_AUTH_POLICY_GENERATION=true MAP_TESTS=true
               make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
@@ -440,7 +440,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin SKIP_MESH_AUTH_POLICY_GENERATION=true
+            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin SKIP_MESH_AUTH_POLICY_GENERATION=true MAP_TESTS=true
               make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
