--- a/pkg/konfluxgen/releaseplanadmission-fbc.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-fbc.template.yaml
@@ -3,10 +3,12 @@ apiVersion: appstudio.redhat.com/v1alpha1
 kind: ReleasePlanAdmission
 metadata:
   labels:
-    release.appstudio.openshift.io/auto-release: "true"
+    release.appstudio.openshift.io/block-releases: "false"
     pp.engineering.redhat.com/business-unit: hybrid-platforms
   name: {{{ truncate ( sanitize .Name ) }}}
   namespace: rhtap-releng-tenant
+  annotations:
+    rhel_target: el9
 spec:
   applications:
   {{{- range .Applications }}}
@@ -19,21 +21,6 @@ spec:
       product_id: [579]
       product_name: "OpenShift Serverless"
       product_version: "fbc"
-      references:
-        - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
-      type: "RHEA"
-      solution: |
-        The Red Hat OpenShift Serverless Operator provides a collection of APIs that
-        enables containers, microservices and functions to run "serverless".
-        Serverless applications can scale up and down (to zero) on demand and be triggered by a
-        number of event sources. OpenShift Serverless integrates with a number of
-        platform services, such as Monitoring and it is based on the open
-        source project Knative.
-      description: "The {{{ .SOVersion }}} release of Red Hat OpenShift Serverless Operator."
-      topic: |
-        The {{{ .SOVersion }}} GA release of Red Hat OpenShift Serverless Operator.
-        For more details see [product documentation](https://docs.redhat.com/documentation/red_hat_openshift_serverless).
-      synopsis: "Red Hat OpenShift Serverless Release {{{ .SOVersion }}}"
     fbc:
       {{{- if .StagedIndex }}}
       stagedIndex: true
@@ -48,6 +35,7 @@ spec:
       configMapName: {{{ .SignCMName }}}
       cosignSecretName: {{{ .SignSecretName }}}
     intention: {{{ .Intention }}}
+    enforceContainerFirstSecurityLabels: true
   pipeline:
     pipelineRef:
       resolver: git
