--- a/.konflux/releaseplanadmissions/serverless-operator-135-1352-fbc-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1352-fbc-prod.yaml
@@ -3,10 +3,12 @@ apiVersion: appstudio.redhat.com/v1alpha1
 kind: ReleasePlanAdmission
 metadata:
   labels:
-    release.appstudio.openshift.io/auto-release: "true"
+    release.appstudio.openshift.io/block-releases: "false"
     pp.engineering.redhat.com/business-unit: hybrid-platforms
   name: serverless-operator-135-1352-fbc-prod
   namespace: rhtap-releng-tenant
+  annotations:
+    rhel_target: el9
 spec:
   applications:
     - serverless-operator-135-fbc-414
@@ -21,21 +23,6 @@ spec:
       product_id: [579]
       product_name: "OpenShift Serverless"
       product_version: "fbc"
-      references:
-        - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
-      type: "RHEA"
-      solution: |
-        The Red Hat OpenShift Serverless Operator provides a collection of APIs that
-        enables containers, microservices and functions to run "serverless".
-        Serverless applications can scale up and down (to zero) on demand and be triggered by a
-        number of event sources. OpenShift Serverless integrates with a number of
-        platform services, such as Monitoring and it is based on the open
-        source project Knative.
-      description: "The 1.35.2 release of Red Hat OpenShift Serverless Operator."
-      topic: |
-        The 1.35.2 GA release of Red Hat OpenShift Serverless Operator.
-        For more details see [product documentation](https://docs.redhat.com/documentation/red_hat_openshift_serverless).
-      synopsis: "Red Hat OpenShift Serverless Release 1.35.2"
     fbc:
       fromIndex: "registry-proxy.engineering.redhat.com/rh-osbs/iib-pub:{{ OCP_VERSION }}"
       targetIndex: "quay.io/redhat-prod/redhat----redhat-operator-index:{{ OCP_VERSION }}"
@@ -47,6 +34,7 @@ spec:
       configMapName: hacbs-signing-pipeline-config-redhatrelease2
       cosignSecretName: konflux-cosign-signing-production
     intention: production
+    enforceContainerFirstSecurityLabels: true
   pipeline:
     pipelineRef:
       resolver: git
