--- a/.konflux/releaseplanadmissions/serverless-operator-135-1352-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1352-stage.yaml
@@ -7,6 +7,8 @@ metadata:
     pp.engineering.redhat.com/business-unit: hybrid-platforms
   name: serverless-operator-135-1352-stage
   namespace: rhtap-releng-tenant
+  annotations:
+    rhel_target: el9
 spec:
   applications: [serverless-operator-135]
   origin: ocp-serverless-tenant
@@ -177,6 +179,7 @@ spec:
       secret: pyxis-staging-secret
       server: stage
     intention: staging
+    enforceContainerFirstSecurityLabels: true
   pipeline:
     pipelineRef:
       resolver: git
