Disable konflux gen for 1.18 - 1.20 components

--- a/config/backstage-plugins.yaml
+++ b/config/backstage-plugins.yaml
@@ -37,7 +37,7 @@ config:
       promotion: {}
     release-v1.18:
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
@@ -50,7 +50,7 @@ config:
       promotion: {}
     release-v1.19:
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
@@ -63,7 +63,7 @@ config:
       promotion: {}
     release-v1.20:
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
