--- a/config/eventing-integrations.yaml
+++ b/config/eventing-integrations.yaml
@@ -73,7 +73,7 @@ config:
       - .*hermetic.*
     release-v1.18:
       konflux:
-        enabled: true
+        enabled: false
         javaImages:
         - .*eventing-integrations-aws-ddb-streams-source
         - .*eventing-integrations-aws-s3-sink
@@ -97,7 +97,7 @@ config:
       - .*hermetic.*
     release-v1.19:
       konflux:
-        enabled: true
+        enabled: false
         javaImages:
         - .*eventing-integrations-aws-ddb-streams-source
         - .*eventing-integrations-aws-s3-sink
@@ -121,7 +121,7 @@ config:
       - .*hermetic.*
     release-v1.20:
       konflux:
-        enabled: true
+        enabled: false
         javaImages:
         - .*eventing-integrations-aws-ddb-streams-source
         - .*eventing-integrations-aws-s3-sink
