--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -65,7 +65,7 @@ config:
       - .*hermetic.*
     release-v1.18:
       konflux:
-        enabled: true
+        enabled: false
         javaImages:
         - .*eventing-kafka-broker-receiver
         - .*eventing-kafka-broker-dispatcher
@@ -83,7 +83,7 @@ config:
       - .*hermetic.*
     release-v1.19:
       konflux:
-        enabled: true
+        enabled: false
         javaImages:
         - .*eventing-kafka-broker-receiver
         - .*eventing-kafka-broker-dispatcher
@@ -97,7 +97,7 @@ config:
       - .*hermetic.*
     release-v1.20:
       konflux:
-        enabled: true
+        enabled: false
         javaImages:
         - .*eventing-kafka-broker-receiver
         - .*eventing-kafka-broker-dispatcher
