--- a/config/kn-plugin-func.yaml
+++ b/config/kn-plugin-func.yaml
@@ -43,7 +43,7 @@ config:
       promotion: {}
     release-v1.18:
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - skipCron: true
         useClusterPool: true
@@ -51,7 +51,7 @@ config:
       promotion: {}
     release-v1.19:
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - skipCron: true
         useClusterPool: true
@@ -59,7 +59,7 @@ config:
       promotion: {}
     release-v1.20:
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - skipCron: true
         useClusterPool: true
