--- a/config/backstage-plugins.yaml
+++ b/config/backstage-plugins.yaml
@@ -36,6 +36,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.18:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
@@ -49,6 +50,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.19:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
@@ -62,6 +64,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.20:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
