--- a/config/client.yaml
+++ b/config/client.yaml
@@ -42,6 +42,7 @@ config:
         version: "4.20"
       promotion: {}
     release-v1.18:
+      dependabotEnabled: false
       konflux:
         enabled: false
         imageOverrides:
@@ -57,6 +58,7 @@ config:
         version: "4.20"
       promotion: {}
     release-v1.19:
+      dependabotEnabled: false
       konflux:
         enabled: false
         imageOverrides:
@@ -72,6 +74,7 @@ config:
         version: "4.20"
       promotion: {}
     release-v1.20:
+      dependabotEnabled: false
       konflux:
         enabled: false
         imageOverrides:
