--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -43,6 +43,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.18:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
@@ -56,6 +57,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.19:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
@@ -65,6 +67,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.20:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
