--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -64,6 +64,7 @@ config:
       skipDockerFilesMatches:
       - .*hermetic.*
     release-v1.18:
+      dependabotEnabled: false
       konflux:
         enabled: false
         javaImages:
@@ -82,6 +83,7 @@ config:
       skipDockerFilesMatches:
       - .*hermetic.*
     release-v1.19:
+      dependabotEnabled: false
       konflux:
         enabled: false
         javaImages:
@@ -96,6 +98,7 @@ config:
       skipDockerFilesMatches:
       - .*hermetic.*
     release-v1.20:
+      dependabotEnabled: false
       konflux:
         enabled: false
         javaImages:
