--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -47,6 +47,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.18:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
@@ -60,6 +61,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.19:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
@@ -73,6 +75,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.20:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
