--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -53,6 +53,7 @@ config:
       - perf-tests$
       - .*e2e-tls$
     release-v1.18:
+      dependabotEnabled: false
       konflux:
         enabled: false
       openShiftVersions:
