Disable konflux gen for 1.18 - 1.20 components (#874)
* Disable konflux gen for 1.18 - 1.20 components

* Disable dependabot for 1.18 - 1.20 components

* run `make generate-ci-action`

--- a/config/backstage-plugins.yaml
+++ b/config/backstage-plugins.yaml
@@ -36,8 +36,9 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.18:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
@@ -49,8 +50,9 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.19:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
@@ -62,8 +64,9 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.20:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
