--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -47,8 +47,9 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.18:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
@@ -60,8 +61,9 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.19:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
@@ -73,8 +75,9 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.20:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
