--- a/config/kn-plugin-func.yaml
+++ b/config/kn-plugin-func.yaml
@@ -42,24 +42,27 @@ config:
         version: "4.20"
       promotion: {}
     release-v1.18:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - skipCron: true
         useClusterPool: true
         version: "4.20"
       promotion: {}
     release-v1.19:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - skipCron: true
         useClusterPool: true
         version: "4.20"
       promotion: {}
     release-v1.20:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
       openShiftVersions:
       - skipCron: true
         useClusterPool: true
