--- a/config/client.yaml
+++ b/config/client.yaml
@@ -42,8 +42,9 @@ config:
         version: "4.20"
       promotion: {}
     release-v1.18:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
         imageOverrides:
         - name: CLI_ARTIFACTS
           pullSpec: brew.registry.redhat.io/rh-osbs/openshift-serverless-1-kn-cli-artifacts-rhel8:1.16.0
@@ -57,8 +58,9 @@ config:
         version: "4.20"
       promotion: {}
     release-v1.19:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
         imageOverrides:
         - name: CLI_ARTIFACTS
           pullSpec: brew.registry.redhat.io/rh-osbs/openshift-serverless-1-kn-cli-artifacts-rhel8:1.16.0
@@ -72,8 +74,9 @@ config:
         version: "4.20"
       promotion: {}
     release-v1.20:
+      dependabotEnabled: false
       konflux:
-        enabled: true
+        enabled: false
         imageOverrides:
         - name: CLI_ARTIFACTS
           pullSpec: brew.registry.redhat.io/rh-osbs/openshift-serverless-1-kn-cli-artifacts-rhel8:1.16.0
