--- a/pkg/discover/ignored.yaml
+++ b/pkg/discover/ignored.yaml
@@ -1,3 +1,12 @@
 - branch: release-v1.18
 - branch: release-v1.19
 - branch: release-v1.20
+- branch: release-1.18
+  repos:
+    - kn-plugin-event
+- branch: release-1.19
+  repos:
+    - kn-plugin-event
+- branch: release-1.20
+  repos:
+    - kn-plugin-event
