Fix dependabot file double stacking with same change

--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -230,11 +230,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/backstage-plugins
       - env:
@@ -470,11 +467,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/client
       - env:
@@ -734,11 +728,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/eventing-integrations
       - env:
@@ -926,11 +917,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/eventing-istio
       - env:
@@ -1166,11 +1154,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/eventing-kafka-broker
       - env:
@@ -1406,11 +1391,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/eventing
       - env:
@@ -1646,11 +1628,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/kn-plugin-event
       - env:
@@ -1886,11 +1865,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/kn-plugin-func
       - env:
@@ -2126,11 +2102,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/serverless-operator
       - env:
@@ -2342,11 +2315,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/net-istio
       - env:
@@ -2582,11 +2552,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/net-kourier
       - env:
@@ -2822,11 +2789,8 @@ jobs:
             git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
-          if git diff --quiet "fork/$branch" "$branch"; then
-            echo "Branches are identical. No need to force push."
-          else
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-          fi
+          git rebase --quiet "$target_branch" "$branch"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
           gh pr create --base "$target_branch" --head "serverless-qe:$branch" --title "[$target_branch] Update dependabot configurations" --body "Update dependabot configurations" || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/serving
       - env:
