--- a/.konflux/releaseplanadmissions/serverless-operator-137-1371-fbc-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-137-1371-fbc-stage.yaml
@@ -11,6 +11,8 @@ metadata:
     rhel_target: el9
 spec:
   applications:
+    - serverless-operator-137-fbc-412
+    - serverless-operator-137-fbc-413
     - serverless-operator-137-fbc-414
     - serverless-operator-137-fbc-415
     - serverless-operator-137-fbc-416
