--- a/.konflux/releases/serverless-operator-137-fbc-422-1371-stage.yaml
+++ b/.konflux/releases/serverless-operator-137-fbc-422-1371-stage.yaml
@@ -9,4 +9,4 @@ spec:
     releaseNotes:
       references:
         - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
-      type: "RHBA"
+      type: "RHEA"
